# FMI-INFO-S15-2024-2027

./: .gitignore  README.md
Anul I - Licenta/: README.md
Anul I - Licenta/Semestrul I/: README.md
Anul I - Licenta/Semestrul I/Arhitectura Sistemelor de Calcul/: PuteriNegative.txt  (+2 more)
Anul I - Licenta/Semestrul II/Programare Orientata pe Obiecte/Colocviu/151_Minciunescu_VladAndrei/: CMakeLists.txt  Comanda.cpp  Comanda.h  QV.cpp  QV.h  main.cpp
Anul I - Licenta/Semestrul II/Programare Orientata pe Obiecte/Colocviu/151_Minciunescu_VladAndrei/include/: Angajat.h  Bautura.h  Bucatar.h  Burger.h  Casier.h  Desert.h  Livrator.h  Produs.h
Anul I - Licenta/Semestrul II/Programare Orientata pe Obiecte/Colocviu/151_Minciunescu_VladAndrei/include/types/: TipAngajat.h  TipServire.h
Anul I - Licenta/Semestrul II/Programare Orientata pe Obiecte/Colocviu/151_Minciunescu_VladAndrei/src/: Angajat.cpp  Bautura.cpp  Bucatar.cpp  Burger.cpp  Casier.cpp  Desert.cpp  Livrator.cpp  Produs.cpp
Anul I - Licenta/Semestrul II/Programare Orientata pe Obiecte/Colocviu/Vara 2025/151_Minciunescu_VladAndrei/: CMakeLists.txt  Order.cpp  Order.h  QV.cpp  QV.h  main.cpp
Anul I - Licenta/Semestrul II/Programare Orientata pe Obiecte/Colocviu/Vara 2025/151_Minciunescu_VladAndrei/include/: Burger.h  Cashier.h  Chef.h  Delivery.h  Desert.h  Drink.h  Employee.h  Exceptions.h  Product.h
Anul I - Licenta/Semestrul II/Programare Orientata pe Obiecte/Colocviu/Vara 2025/151_Minciunescu_VladAndrei/include/types/: EmployeeType.h  Ingredients.h  ServiceType.h
Anul I - Licenta/Semestrul II/Programare Orientata pe Obiecte/Colocviu/Vara 2025/151_Minciunescu_VladAndrei/src/: Burger.cpp  Cashier.cpp  Chef.cpp  Delivery.cpp  Desert.cpp  Drink.cpp  Employee.cpp  Product.cpp
(+555 files in other folders)
